[package]
name = "yield-liquidator"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
serde_json = "1.0.57"
tokio = { version = "0.2.22", features = ["macros"] }

# TODO: These are still not used
# CLI
gumdrop = "0.8.0"
# Logging
tracing = "0.1.18"
tracing-subscriber = "0.2.10"
serde = "1.0.114"

[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
