[package]
name = "yield-liquidator"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
ethers = "0.2.0"
serde_json = "1.0.57"
tokio = { version = "0.2.22", features = ["macros"] }

# CLI
gumdrop = "0.8.0"
# Logging
tracing = "0.1.18"
tracing-subscriber = "0.2.10"
serde = "1.0.114"
thiserror = "1.0.20"

[build-dependencies]
ethers = { version = "0.2.0", features = ["abigen"] }
